[package]
name = "task"
version = "0.1.0"
authors = ["jtjohn24 <jtjohn24@cs.washington.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4.0"
simple_logger = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# assigner = { git = "https://github.com/599C-20wi/assigner" }
assigner = { path = "../assigner" } 
